--- a/main.html
+++ b/main.html
@@ -7,15 +7,49 @@
   <table>
     <tbody>
       <tr>
-        <td>Account</td>
+        <td colspan="2">Account</td>
       </tr>
       <tr>
         <td>Name</td>
         <td>Stock Investment</td>
       </tr>
-      <tr></tr>
+      <tr>
+        <td>Starting balance</td>
+        <td>1000000</td>
+      </tr>
+      <tr>
+        <td>Type</td>
+        <td>IRA/401K</td>
+      </tr>
+      <tr>
+        <td>Content class</td>
+        <td>SP500</td>
+      </tr>
+    </tbody>
+    <tbody>
+      <tr>
+        <td colspan="2">Transaction</td>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td>Conversion</td>
+      </tr>
+      <tr>
+        <td>Amount</td>
+        <td>$80,000</td>
+      </tr>
+      <tr>
+        <td>Type</td>
+        <td>Transfer</td>
+      </tr>
+      <tr>
+        <td>Source</td>
+        <td> Stock Investment </td>
+      </tr>
     </tbody>
   </table>
 </body>
+
+<textarea id="console"></textarea>
   
 </html>
