--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <div class="row row-cols-auto">
-      <div class="card col">
+      <div class="card col mbe-2">
         <div class="card-header">
           Account: IRA
         </div>
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div class="card col">
+      <div class="card col mbe-2">
         <div class="card-header">
           Account: Investment
         </div>
