--- a/main.html
+++ b/main.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <title>Projector</title>
+  <style>
+
+  </style>
 </head>
 
 <body>
 
   <div class="container">
     <div class="row row-cols-auto">
-      <div class="card col mbe-2">
+      <div class="card col me-2 mb-2">
         <div class="card-header">
           Account: IRA
         </div>
@@ -20,7 +23,25 @@
         </div>
       </div>
 
-      <div class="card col mbe-2">
+      <div class="card col me-2 mb-2">
+        <div class="card-header">
+          Account: Investment
+        </div>
+
+        <div class="card-body">
+        </div>
+      </div>
+
+      <div class="card col me-2 mb-2">
+        <div class="card-header">
+          Account: Investment
+        </div>
+
+        <div class="card-body">
+        </div>
+      </div>
+
+      <div class="card col me-2 mb-2">
         <div class="card-header">
           Account: Investment
         </div>
