--- a/main.html
+++ b/main.html
@@ -6,13 +6,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <title>Projector</title>
   <style>
-
+    #accounts .card {
+      width: 18rem;
+    }
   </style>
 </head>
 
 <body>
 
-  <div class="container">
+  <div id="accounts" class="container">
     <div class="row row-cols-auto">
       <div class="card col me-2 mb-2">
         <div class="card-header">
@@ -20,6 +22,10 @@
         </div>
 
         <div class="card-body">
+          <p>One</p>
+          <p>Two</p>
+          <p>Three</p>
+          <p>Four</p>
         </div>
       </div>
 
