--- a/main.html
+++ b/main.html
@@ -22,10 +22,8 @@
         </div>
 
         <div class="card-body">
-          <p>One</p>
-          <p>Two</p>
-          <p>Three</p>
-          <p>Four</p>
+          <label for="accountBalance" class="form-label">Account Balance</label>
+          <input type="number" class="form-control" id="accountBalance">
         </div>
       </div>
 
