--- a/main.html
+++ b/main.html
@@ -24,6 +24,12 @@
         <div class="card-body">
           <label for="accountBalance" class="form-label">Account Balance</label>
           <input type="number" class="form-control" id="accountBalance">
+
+          <label for="accountType" class="form-label">Account Type</label>
+          <select type="number" class="form-select" id="accountType">
+            <option value="" selected>Please select</option>
+            <option value="SP500">S&P 500</option>
+          </select>
         </div>
       </div>
 
