--- a/main.html
+++ b/main.html
@@ -16,49 +16,57 @@
 
   <div id="accounts" class="container">
     <div class="row row-cols-auto">
-      <div class="card col me-2 mb-2">
-        <div class="card-header">
-          Account: IRA
+      <div class="col me-2 mb-2">
+        <div class="card">
+          <div class="card-header">
+            Account: IRA
+          </div>
+  
+          <div class="card-body">
+            <label for="accountBalance" class="form-label">Account Balance</label>
+            <input type="number" class="form-control" id="accountBalance">
+  
+            <label for="accountType" class="form-label">Account Type</label>
+            <select type="number" class="form-select" id="accountType">
+              <option value="" selected>Please select</option>
+              <option value="SP500">S&P 500</option>
+            </select>
+          </div>
+        </div>
         </div>
 
-        <div class="card-body">
-          <label for="accountBalance" class="form-label">Account Balance</label>
-          <input type="number" class="form-control" id="accountBalance">
-
-          <label for="accountType" class="form-label">Account Type</label>
-          <select type="number" class="form-select" id="accountType">
-            <option value="" selected>Please select</option>
-            <option value="SP500">S&P 500</option>
-          </select>
+      <div class="col me-2 mb-2">
+        <div class="card col me-2 mb-2">
+          <div class="card-header">
+            Account: Investment
+          </div>
+  
+          <div class="card-body">
+          </div>
         </div>
-      </div>
-
-      <div class="card col me-2 mb-2">
-        <div class="card-header">
-          Account: Investment
         </div>
 
-        <div class="card-body">
+      <div class="col me-2 mb-2">
+        <div class="card col me-2 mb-2">
+          <div class="card-header">
+            Account: Investment
+          </div>
+  
+          <div class="card-body">
+          </div>
         </div>
-      </div>
-
-      <div class="card col me-2 mb-2">
-        <div class="card-header">
-          Account: Investment
-        </div>
-
-        <div class="card-body">
-        </div>
-      </div>
-
-      <div class="card col me-2 mb-2">
-        <div class="card-header">
-          Account: Investment
         </div>
 
-        <div class="card-body">
+      <div class="col me-2 mb-2">
+        <div class="card col me-2 mb-2">
+          <div class="card-header">
+            Account: Investment
+          </div>
+  
+          <div class="card-body">
+          </div>
         </div>
-      </div>
+        </div>
     </div>
   </div>
 
