--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
         </div>
 
       <div class="col me-2 mb-2">
-        <div class="card col me-2 mb-2">
+        <div class="card">
           <div class="card-header">
             Account: Investment
           </div>
@@ -47,7 +47,7 @@
         </div>
 
       <div class="col me-2 mb-2">
-        <div class="card col me-2 mb-2">
+        <div class="card">
           <div class="card-header">
             Account: Investment
           </div>
@@ -58,7 +58,7 @@
         </div>
 
       <div class="col me-2 mb-2">
-        <div class="card col me-2 mb-2">
+        <div class="card">
           <div class="card-header">
             Account: Investment
           </div>
