--- a/main.html
+++ b/main.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow mb-4">
+    Financial projector
+  </header>
 
   <div id="accounts" class="container">
     <div class="row row-cols-auto">
