--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow mb-4">
+  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow mb-4 fs-1 text-light">
     Financial projector
   </header>
 
