--- a/main.html
+++ b/main.html
@@ -82,6 +82,7 @@
   <script src="https://d3js.org/d3.v6.js"></script>
   <script src="main.js"></script>
   <script src="Simulation.js" type="module"></script>
+  <script src="SimEntries.js" type="module"></script>
 </body>
   
 </html>
