--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v6.js"></script>
-  <script src="main.js"></script>
+  <script src="main-gen.js"></script>
 </body>
   
 </html>
