--- a/main.html
+++ b/main.html
@@ -36,7 +36,16 @@
             </select>
           </div>
         </div>
+      </div>
+
+      <SimEntry-element class="col me-2 mb-2">
+        <span slot="header">Account: Custom</span>
+
+        <div slot="body">
+          <label for="accountBalance" class="form-label">Account Balance</label>
+          <input type="number" class="form-control" id="accountBalance">
         </div>
+      </SimEntry-element>
 
       <div class="col me-2 mb-2">
         <div class="card">
@@ -47,7 +56,7 @@
           <div class="card-body">
           </div>
         </div>
-        </div>
+      </div>
 
       <div class="col me-2 mb-2">
         <div class="card">
@@ -58,7 +67,7 @@
           <div class="card-body">
           </div>
         </div>
-        </div>
+      </div>
 
       <div class="col me-2 mb-2">
         <div class="card">
@@ -69,7 +78,7 @@
           <div class="card-body">
           </div>
         </div>
-        </div>
+      </div>
     </div>
   </div>
 
@@ -77,6 +86,20 @@
 
   <div id="my_dataviz"></div>
 
+
+  <template id="SimEntry-element-template">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <div class="card">
+      <div class="card-header">
+        <slot name="header">Header label here</slot>>
+      </div>
+
+      <div class="card-body">
+        <slot name="body">Body goes here</slot>
+      </div>
+    </div>
+  </template>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v6.js"></script>
