--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <title>Projector</title>
   <style>
-    #accounts .card {
+    .acct-card {
       width: 18rem;
     }
   </style>
@@ -19,7 +19,7 @@
 
   <div id="accounts" class="container">
     <div class="row row-cols-auto">
-      <div class="col me-2 mb-2">
+      <div class="col me-2 mb-2 acct-card">
         <div class="card">
           <div class="card-header">
             Account: IRA
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <SimEntry-element class="col me-2 mb-2">
+      <SimEntry-element class="col me-2 mb-2 acct-card">
         <span slot="header">Account: Custom</span>
 
         <div slot="body">
@@ -47,7 +47,7 @@
         </div>
       </SimEntry-element>
 
-      <div class="col me-2 mb-2">
+      <div class="col me-2 mb-2 acct-card">
         <div class="card">
           <div class="card-header">
             Account: Investment
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="col me-2 mb-2">
+      <div class="col me-2 mb-2 acct-card">
         <div class="card">
           <div class="card-header">
             Account: Investment
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="col me-2 mb-2">
+      <div class="col me-2 mb-2 acct-card">
         <div class="card">
           <div class="card-header">
             Account: Investment
