--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <SimEntry-element class="col me-2 mb-2 acct-card">
+      <SimEntry-element class="col me-2 mb-2 acct-card" id="account-sample">
         <span slot="header">Account: Custom</span>
 
         <div slot="body">
@@ -92,7 +92,7 @@
 
     <div class="card">
       <div class="card-header">
-        <slot name="header">Header label here</slot>>
+        <slot name="header">Header label here</slot>
       </div>
 
       <div class="card-body">
